[package]
name = "pdfium-sys"
version = "0.1.0"
authors = ["Aaron Haley <15240680+aar0ndev@users.noreply.github.com>"]
edition = "2018"
description = "PDFium low-level bindings for Rust"
repository = "https://github.com/aar0ndev/pdfium-sys/"
license = "MIT OR Apache-2.0"
keywords = ["pdfium", "pdf", "graphics", "bindings"]
categories = ["external-ffi-bindings"]
links = "pdfium"

[features]
default = ["bindgen"]

[build-dependencies]
bindgen = {version = "0.54", optional=true}

[package.metadata.docs.rs]
features = []