[package]
name = "pdfium-sys"
version = "0.1.1"
authors = ["Aaron Haley <15240680+aar0ndev@users.noreply.github.com>"]
edition = "2018"
description = "PDFium low-level bindings for Rust"
repository = "https://github.com/aar0ndev/pdfium-sys/"
license = "MIT OR Apache-2.0"
keywords = ["pdfium", "pdf", "graphics", "bindings"]
categories = ["external-ffi-bindings"]
links = "pdfium"

[features]
default = []
dynamic_link = []

[dependencies]
link-cplusplus = {version = "1.0", optional=true}

[build-dependencies]
bindgen = {version = "0.54", optional=true}
