[package]
name = "pdfium-sys"
version = "0.2.0"
authors = ["Aaron Haley <15240680+aar0ndev@users.noreply.github.com>"]
edition = "2021"
description = "PDFium low-level bindings for Rust"
repository = "https://github.com/aar0ndev/pdfium-sys/"
license = "MIT OR Apache-2.0"
keywords = ["pdfium", "pdf", "graphics", "bindings"]
categories = ["external-ffi-bindings"]
links = "pdfium"

[build-dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
bindgen = { version = "0.63" }
flate2 = "1.0.25"
tar = "0.4.38"
